--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
     <section id="welcome" class="welcome-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-6">
+                    <h1>Le Phénomène Open Data</h1>
+					<p>A back to top arrow fades in as the user starts scrolling down the page which takes back to the welcome screen with one click.</p>
+					<p>You can edit and publish this template but please leave a reference to <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a>. Thank You!</p>
+					<p>&nbsp;</p>
+                    <a class="btn btn-primary page-scroll" href="#about">Click To Scroll Down!</a>
+                </div>
+                <div class="col-lg-6">
                     <h1>Le Phénomène Open Data</h1>
 					<p>A back to top arrow fades in as the user starts scrolling down the page which takes back to the welcome screen with one click.</p>
 					<p>You can edit and publish this template but please leave a reference to <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a>. Thank You!</p>
