--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <h1>Image</h1>
+                    <img src="C:\Users\ADMIN\Documents\GitHub\OpenData\images\image1.PNG">
 					<p>A back to top arrow fades in as the user starts scrolling down the page which takes back to the welcome screen with one click.</p>
 					<p>You can edit and publish this template but please leave a reference to <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a>. Thank You!</p>
 					<p>&nbsp;</p>
