--- a/index.html
+++ b/index.html
@@ -34,14 +34,21 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#outils"> Outils de la veille</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#whatwedo">What We Do</a>
+                        <a class="page-scroll" href="#defin"> Définition </a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#formats"> Formats </a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#thematiques"> Thématiques </a>
+                    </li>                      
+                    <li>
+                        <a class="page-scroll" href="#france"> Open Data France </a>
+                    </li>
+                                          
                 </ul>
             </div>	<!-- .navbar-collapse -->
         </div>		<!-- .container -->
@@ -62,8 +69,8 @@
             <div class="row">
                 <div class="col-lg-4">
                     <h1>Image</h1>
-                    <img src="C:\Users\ADMIN\Documents\GitHub\OpenData\images\image1.PNG">
-					<p>A back to top arrow fades in as the user starts scrolling down the page which takes back to the welcome screen with one click.</p>
+                    <img src="C:\Users\ADMIN\Documents\GitHub\OpenData\images\image1.PNG" , width="300" , height="300" >
+					<p>A back to top arrow fades in as the user starts scrolling down the pag which takes back to the welcome screen with one click.</p>
 					<p>You can edit and publish this template but please leave a reference to <a href="http://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a>. Thank You!</p>
 					<p>&nbsp;</p>
                     <a class="btn btn-primary page-scroll" href="#about">Click To Scroll Down!</a>
@@ -79,7 +86,18 @@
         </div>
     </section>
 
-    <!-- About -->
+    <!-- outils de veille  -->
+    <section id="outils" class="about-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Outils de veille</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <section id="about" class="about-section">
         <div class="container">
             <div class="row">
@@ -88,10 +106,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>    
 
-    <!-- What we do Section -->
-    <section id="whatwedo" class="whatwedo-section">
+    <!-- definition Section -->
+    <section id="defin" class="whatwedo-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -102,8 +120,8 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact-section">
+    <!-- format Section -->
+    <section id="formats" class="contact-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -112,7 +130,50 @@
             </div>
         </div>
     </section>
-	
+    <!-- thematique Section -->
+    <section id="thematiques" class="whatwedo-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                     <h1>Le Phénomène Open Data</h1>
+                    <h1>What We Do</h1>
+                </div>
+            </div>
+        </div>
+    </section>  
+
+ <!-- thematique_suite Section -->
+    <section id="thématiques_suite" class="whatwedo-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                     <h1>Le Phénomène Open Data</h1>
+                    <h1>What We Do</h1>
+                </div>
+            </div>
+        </div>
+    </section>  
+    <!-- open data france Section -->
+    <section id="france" class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Contact Section</h1>
+                </div>
+            </div>
+        </div>
+    </section>	
+
+        <!-- open data france suite Section -->
+    <section id="france_suite" class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Contact Section</h1>
+                </div>
+            </div>
+        </div>
+    </section>
 	<a id="back2Top" title="Back to top" href="#">&#10148;</a>
 	
     <!-- jQuery -->
