modif chemin im

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="col-lg-7">
                     
-                    <img src="C:\Users\ADMIN\Documents\GitHub\OpenData\images\opendata1.png" , align="center" , width="600" , height="250" > 
+                    <img src="images\opendata1.png" , align="center" , width="600" , height="250" > 
 				
                 </div>            	
 
