--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="col-lg-8">
                 	<div class="row">
                 		<div class="col-lg-8">
-	                    	<h3>Twitter </h3>
+	                    	<h2>Twitter </h2>
 	                    	<p align="left">Voici un lien vers mon profil Twitter <a href="https://twitter.com/SkanderMalouche" target="_blank" rel="nofollow"> SkanderMalouche </a>. </p>
 	                	</div class="col-lg-4">
 	                		<img src="images\_twitter1.png" , align="center" , width="100" , height="100" > 
@@ -128,7 +128,7 @@
 	                <br/>
                 	<div class="row">
                 		<div class="col-lg-8">
-	                    	<h3> LinkedIn </h3>
+	                    	<h2> LinkedIn </h2>
 	                    	<p align="left">Voici un lien vers mon profil LinkedIn <a href="https://www.linkedin.com/in/skander-malouche-053372124/" target="_blank" rel="nofollow"> Skander Malouche </a>. </p>
 	                	</div class="col-lg-4">
 	                		<img src="images\Linkedin.png" , align="center" , width="100" , height="100" > 
@@ -141,7 +141,7 @@
                     <br/>
                 	<div class="row">
                 		<div class="col-lg-8">
-	                    	<h3> Scoop.It! </h3>
+	                    	<h2> Scoop.It! </h2>
 	                    	<p align="left">Outil de curation </p>
 	                	</div class="col-lg-4">
 	                		<img src="images\scoopit.png" , align="center" , width="150" , height="100" > 
@@ -155,7 +155,7 @@
                     <br/>
                 	<div class="row">
                 		<div class="col-lg-8">
-	                    	<h3> Google Alerts </h3>
+	                    	<h2> Google Alerts </h2>
 	                    	<p align="left"> Notification par mail </p>
 	                	</div class="col-lg-4">
 	                		<img src="images\google.png" , align="center" , width="150" , height="100" > 
@@ -168,7 +168,9 @@
                 </div>                
             </div>            
         </div>
-    </section>    
+    </section>   
+    <section id="veille_suite" class="about-section"> 
+    </section>
 
     <!-- definition Section -->
     <section id="defin" class="whatwedo-section">
