--- a/index.html
+++ b/index.html
@@ -109,16 +109,27 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <h3>Qu'est ce qu'une veille technologique? </h3>
+                	<br>
+                    <h2>Qu'est ce qu'une veille technologique? </h2>
+                    <br/>
+                    <li align="left"> La <b> veille </b> est une activité continue et itérative faisant l'objet d'une surveillance active de l'environnement technologique, commercial... Le but de veille étant d'anticiper les évolutions.</li>
+                    <br/>
+                    <li align="left"> La <b> veille technologique </b> ou <b> veille scientifique et technique </b> consiste à s'informer de façon systématique sur les techniques les plus récentes et surtout sur leur mise à disposition commerciale, ce qui constitue la différence entre la technique et la technologique. Pour l'entreprise, cette activité met en œuvre des techniques d'acquisition, de stockage et d'analyse d'informations et leur distribution automatique aux différentes sections concernées de l'entreprise, à la manière d'une revue de presse. </li>
                     
                 </div>
                 <div class="col-lg-8">
                 	<div class="row">
                 		<div class="col-lg-8">
 	                    	<h2>Twitter </h2>
-	                    	<p align="left">Voici un lien vers mon profil Twitter <a href="https://twitter.com/SkanderMalouche" target="_blank" rel="nofollow"> SkanderMalouche </a>. </p>
+	                    	<br/>
+	                    	<p>
+	                    	<li align="left"> Twitter est un réseau social de microblogage géré par l'entreprise Twitter Inc ,situé à San Francisco, États-Unis. Il a été créé le 21 mars 2006 par Jack Dorsey, Evan Williams, Biz Stone et Noah Glass, et est lancé en juillet 2016.  </li> <br/>
+	                    	<li align="left"> Twitter compte 330 millions d’utilisateurs actifs mensuellement, avec 500 millions de tweets envoyés par jour et est disponible en plus de 40 langues.  </li> <br/>
+	                    	<li align="left">Voici un lien vers <b> mon profil Twitter <a href="https://twitter.com/SkanderMalouche" target="_blank" rel="nofollow"> SkanderMalouche </a> </b>.
+	                    	</li> </p>
 	                	</div class="col-lg-4">
-	                		<img src="images\_twitter1.png" , align="center" , width="100" , height="100" > 
+	                		<br/> <br/> <br/> <br/> 
+	                		<img src="images\_twitter1.png" , align="center" , width="120" , height="120" > 
 	                	<div>
 
 	                	</div>
@@ -128,41 +139,67 @@
 	                <br/>
                 	<div class="row">
                 		<div class="col-lg-8">
-	                    	<h2> LinkedIn </h2>
-	                    	<p align="left">Voici un lien vers mon profil LinkedIn <a href="https://www.linkedin.com/in/skander-malouche-053372124/" target="_blank" rel="nofollow"> Skander Malouche </a>. </p>
+                			<br/>
+	                    	<h2> LinkedIn </h2> <br/>
+	                    	<p>
+	                    	<li align="left"> LinkedIn est un réseau social professionnel en ligne créé en 2003 à Mountain View, Californie.	</li> 
+	                    	<br/>
+
+	                    	<li align="left"> En 2018 LinkedIn compte 115 millions d'utilisateur, et vient se positionner dans le top 10 des réseaux sociaux les plus utilisés notamment aprés Facebook, Instagram et Twitter...	</li>
+
+	                    	<br/>
+
+	                    	<li align="left">Voici un lien vers <b> mon profil LinkedIn <a href="https://www.linkedin.com/in/skander-malouche-053372124/" target="_blank" rel="nofollow"> Skander Malouche </a>. </b>
+	                    	</li> 
+
+	                    	<br/>
+
+	                    	</p>
 	                	</div class="col-lg-4">
-	                		<img src="images\Linkedin.png" , align="center" , width="100" , height="100" > 
+	                	<br/> <br/> <br/> <br/> 
+	                	<br/>
+	               		<img src="images\Linkedin.png" , align="center" , width="120" , height="120" > 
 	                	<div>
 
 	                	</div>	                	
                     </div>
+<!-- Google Alerts -->
+                    <br/>
+                	<div class="row">
+                		<div class="col-lg-8">
+                			<br/>
+	                    	<h2> Google Alerts </h2>
+	                    	<br/>
+	                    	<p> <li align="left"> Google Alerts est un service qui envoie un e-mail ou une alerte lorsqu'une nouvelle page web correspondant aux mots-clés que l'on a choisi, apparaît dans les résultats Google </li></p>
+	                	</div class="col-lg-4">
+	                		<br/> <br/>
+	                		<img src="images\google.png" , align="center" , width="180" , height="120" > 
+	                	<div>
 
+	                	</div>	                	
+                    </div>
 <!-- scoop it -->
                     <br/>
                 	<div class="row">
                 		<div class="col-lg-8">
-	                    	<h2> Scoop.It! </h2>
-	                    	<p align="left">Outil de curation </p>
+                			<br/>
+	                    	<h2> Scoop.It </h2> <br/>
+	                    	<p align="left">
+	                    		<li align="left"> Scoop.it une plateforme en ligne de curation de contenu proposant à ses utilisateurs de faire leur 		propre veille et de partager celle-ci avec d’autres utilisateurs.  <br/>
+
+								Créée en 2010 par deux Français, elle est basée à San Francisco et développée en anglais afin de conquérir le marché américain.</li> <br/>
+								<li align="left">  <b> La curation de contenu </b> est une pratique qui consiste à sélectionner, éditer et partager les contenus les plus pertinents du Web pour une requête ou un sujet donné. La curation est utilisée et revendiquée par des sites qui souhaitent offrir une plus grande visibilité et une meilleure lisibilité à des contenus (textes, documents, images, vidéos, sons…) qu'ils jugent utiles aux internautes et dont le partage peut les aider ou les intéresser. </li>
+							</p>
 	                	</div class="col-lg-4">
-	                		<img src="images\scoopit.png" , align="center" , width="150" , height="100" > 
+	                		<br/> <br/> <br/> <br/> <br/>
+	                		<img src="images\scoopit.png" , align="center" , width="180" , height="120" > 
 	                	<div>
 
 	                	</div>	                	
                     </div>
 
 
-                    <!-- Google Alerts -->
-                    <br/>
-                	<div class="row">
-                		<div class="col-lg-8">
-	                    	<h2> Google Alerts </h2>
-	                    	<p align="left"> Notification par mail </p>
-	                	</div class="col-lg-4">
-	                		<img src="images\google.png" , align="center" , width="150" , height="100" > 
-	                	<div>
-
-	                	</div>	                	
-                    </div>
+                    
 
 
                 </div>                
@@ -170,6 +207,9 @@
         </div>
     </section>   
     <section id="veille_suite" class="about-section"> 
+    </section>
+        </section>   
+    <section id="veille_suite2" class="about-section"> 
     </section>
 
     <!-- definition Section -->
