Outils de veille vf

--- a/index.html
+++ b/index.html
@@ -112,11 +112,23 @@
                 	<br>
                     <h2>Qu'est ce qu'une veille technologique? </h2>
                     <br/>
-                    <li align="left"> La <b> veille </b> est une activité continue et itérative faisant l'objet d'une surveillance active de l'environnement technologique, commercial... Le but de veille étant d'anticiper les évolutions.</li>
                     <br/>
-                    <li align="left"> La <b> veille technologique </b> ou <b> veille scientifique et technique </b> consiste à s'informer de façon systématique sur les techniques les plus récentes et surtout sur leur mise à disposition commerciale, ce qui constitue la différence entre la technique et la technologique. Pour l'entreprise, cette activité met en œuvre des techniques d'acquisition, de stockage et d'analyse d'informations et leur distribution automatique aux différentes sections concernées de l'entreprise, à la manière d'une revue de presse. </li>
+                    <br/>
+
+                    <li align="left"> La <b> veille </b> est une activité continue et itérative faisant l'objet d'une surveillance active de l'environnement technologique, commercial... et acquérir ainsi de l'information à caractère stratégique ou opérationnel afin d'anticiper les évolutions de cet environnement, détecter les menaces et les opportunité pour l'amélioration du processus de décision.</li>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <li align="left"> La <b> veille technologique </b> ou <b> veille scientifique et technique </b> consiste à s'informer de façon systématique sur les techniques les plus récentes et aussi sur leur mise à disposition commerciale, ce qui constitue la différence entre la technique et la technologique. Pour l'entreprise, cette activité met en œuvre des techniques d'acquisition, de stockage et d'analyse d'informations et leur distribution automatique aux différentes sections concernées de l'entreprise, à la manière d'une revue de presse. </li>
+
+                    <br/>
+                    <br/>
+                    <br/>
+                    <li align="left"> Pour ma veille, j'ai utilisé différents outils dont principalement:<br/>  <b> <br/> Twitter <br/> <br/> LinkedIn <br/><br/> Google Alerts <br/><br/> Scoop.It <br/></b></li>
                     
                 </div>
+
+
                 <div class="col-lg-8">
                 	<div class="row">
                 		<div class="col-lg-8">
