--- a/index.html
+++ b/index.html
@@ -315,51 +315,65 @@
                 	<br/>
                 	<p align="left"> Pour les données tabulaire on retrouve les formats: </p>
                 	<br/>
-                	<li align="left" > <b> CSV </b> <i> : Comma Separated Value, </i> format ouvert, il peut s'ouvrir dans n'importe quel logiciel tableur. </li>
+                	<li align="left" > <b> CSV </b> <i> : Comma Separated Value, </i> format ouvert, il peut s'ouvrir dans n'importe quel logiciel tableur, </li>
                 	<br/>
-					<li align="left" > <b> ODS </b> <i>: Open Document Spreadsheet,</i> format ouvert du logiciel Calc de la suite bureautique libre et gratuite OpenOffice. </li>
+					<li align="left" > <b> ODS </b> <i>: Open Document Spreadsheet,</i> format ouvert du logiciel Calc de la suite bureautique libre et gratuite OpenOffice, </li>
 					<br/>
 					<li align="left" > <b> XLS </b> <i>:  Excel, </i> format fermé, propriétaire, de la suite bureautique Microsoft Office. Devenu un standard de fait, il peut s'ouvrir dans le logiciel Calc de la suite Open Office. Ce format est assez répandu malgrès le fait qu'il soit un format priviligié (n'est pas ouvert).  </li>
 					<br/>
 					<br/>
 
+                	<h3> Les Données géographiques / géospatiales </h3>
+                	<br/>
+                	<p align="left"> Pour les données géographiques (géospatiales) on retrouve les formats: </p>
+                	<br/>
+                	<li align="left" > <b> KML </b> <i> : Keyhole Markup Language,  </i> format ouvert, standard international utilisé notamment par les applications géographiques Google, </li>
+                	<br/>
+					<li align="left" > <b> KMZ </b> : format ouvert. C'est la version compressée du fichier KML, il contient les informations géo-référencées du fichier KML et en complément un dossier avec les images associées aux coordonnées, </li>
+					<br/>
+					<li align="left" > <b> geoJSON </b> <i>:  Excel, </i> : format basé sur JavaScript Object Notation – JSON,  </li>
+					<br/>	
+                	<li align="left" > <b> SHP  </b> <i> : Shapefile, </i> format propriétaire, format ouvert, devenu un standard de fait et utilisé par de nombreux logiciels libres. <br/> Les fichiers SHP se composent de quatre fichiers :
+                	<br/>
+                	<ol align="left">
+                	<br/>
+                	<li>  le fichier .shp : contient les objets géographiques, </li>
+					<li> le fichier .shx : index de la géométrie, </li>
+					<li> le fichier .prj : contient les informations sur le système de coordonnées, il peut s'ouvrir dans un logiciel de traitement de texte ou un éditeur de texte, </li>
+					<li> le fichier .dbf : contient les informations relatives aux objets géographiques, il peut s'ouvrir dans un tableur type Calc de Open Office. </li> </ol>
+					</li>
+                	<br/>									
 
-                	<li align="left"> </li> <br/>
+
+                	
             	</div>
 
- <!--  
-<li align="left" > <b> CSV </b> <i>   </li>
- 	Données tabulaires
-<li align="left" > <b> CSV </b> <i> : Comma Separated Value, </i> format ouvert, il peut s'ouvrir dans n'importe quel logiciel tableur. </li>
-<li align="left" > <b> ODS </b> <i>: Open Document Spreadsheet,</i> format ouvert du logiciel Calc de la suite bureautique libre et gratuite OpenOffice. </li>
-<li align="left" > <b> XLS </b> <i> Excel, </i>  </li>
-<li align="left" > <b> CSV </b> <i> format fermé, propriétaire, de la suite bureautique Microsoft Office. Devenu un standard de fait, il peut s'ouvrir dans le logiciel Calc de la suite Open Office. Ce format est assez répandu malgrès le fait qu'il soit un format priviligié (n'est pas ouvert).  </li>
-ODS : Open Document Spreadsheet, format ouvert du logiciel Calc de la suite bureautique libre et gratuite OpenOffice.org.
-XLS : Excel, format fermé, propriétaire, de la suite bureautique Microsoft Office. Devenu un standard de fait, il peut s'ouvrir dans le logiciel Calc de la suite Open Office. Ce format est assez répandu malgrès le fait qu'il soit un format priviligié (n'est pas ouvert). 
-Données géographiques
-KML : Keyhole Markup Language, format ouvert, standard international utilisé notamment par les applications géographiques Google.
-KMZ : format ouvert. C'est la version compressée du fichier KML, il contient les informations géo-référencées du fichier KML et en complément un dossier avec les images associées aux coordonnées.
-SHP : Shapefile, format propriétaire, format ouvert, devenu un standard de fait et utilisé par de nombreux logiciels libres. Les fichiers SHP se composent de quatre fichiers : 
-le fichier .shp : contient les objets géographiques,
-le fichier .shx : index de la géométrie,
-le fichier .prj : contient les informations sur le système de coordonnées, il peut s'ouvrir dans un logiciel de traitement de texte ou un éditeur de texte,
-le fichier .dbf : contient les informations relatives aux objets géographiques, il peut s'ouvrir dans un tableur type Calc de Open Office.
-Autres données
-RSS : lien vers un flux RSS proposé par un site internet permettant de suivre les nouveaux contenus publiés.
- 
-
- -->
+ 
 
 
 
 
             	<div class="col-lg-3">
-                	<li align="left"> </li> <br/>
+                	<img src="images\csv.png" , align="right" , width="120" , height="120" >
+                	<br/> <br/><br/><br/>
+                	<img src="images\ods.png" , align="left" , width="120" , height="120" > 
+                	<br/><br/><br/><br/>
+                	<img src="images\xls2.png" , align="right" , width="120" , height="120" > 
+                	<br/> <br/><br/><br/><br/><br/><br/><br/><br/>
+                	<img src="images\kml.png" , align="left" , width="120" , height="120" > 
+                	<br/><br/><br/><br/>
+                	<img src="images\kmz.png" , align="right" , width="120" , height="120" > 
+                	<br/><br/><br/><br/>
+                	<img src="images\geojson.png" , align="left" , width="120" , height="120" > 
+                	<br/><br/><br/><br/>
+                	<img src="images\shp.png" , align="right" , width="120" , height="120" > 
             	</div>
             	
             </div>
         </div>     
 </div>
+    </section>
+    <section id="formats_suite" class="contact-section">
     </section>
 
     <!-- thematique Section -->
