--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
             </div>            
         </div>
     </section>   
-    <section id="veille_suite" class="about-section"> 
+    <section id="outils_veille_suite" class="about-section"> 
     </section>
         </section>   
-    <section id="veille_suite2" class="about-section"> 
+    <section id="outils_veille_suite2" class="about-section"> 
     </section>
 
 
@@ -254,7 +254,7 @@
                    </p>
                 </div>
                 <div class="col-lg-8">
-                	<img src="C:\Users\ADMIN\Documents\GitHub\OpenData\images\image1.PNG" , width="800" , height="400" >
+                	<img src="images\image1.PNG" , width="800" , height="400" >
                  
                 </div>                
             </div> 
@@ -376,13 +376,17 @@
     <section id="formats_suite" class="contact-section">
     </section>
 
+
+
+
+
     <!-- thematique Section -->
     <section id="thematiques" class="whatwedo-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                     <h1>Le Phénomène Open Data</h1>
-                    <h1>What We Do</h1>
+                    <h1>Thématiques de l'Open Data </h1>
+					<br/>	                    
                 </div>
             </div>
         </div>
