--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="col-lg-7">
                     
-                    <img src="images\opendata11.png" , align="center" , width="600" , height="270" > 
+                    <img src="images\opendata11.PNG" , align="center" , width="600" , height="270" > 
 				
                 </div>            	
 
