--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="col-lg-7">
                     
-                    <img src="images\opendata11.PNG" , align="center" , width="600" , height="270" > 
+                    <img src="images\opendata.png" , align="center" , width="600" , height="270" > 
 				
                 </div>            	
 
@@ -141,7 +141,7 @@
 	                    	</li> </p>
 	                	</div class="col-lg-4">
 	                		<br/> <br/> <br/> <br/> 
-	                		<img src="images\_twitter1.png" , align="center" , width="120" , height="120" > 
+	                		<img src="https://www.google.fr/search?q=image+twitter&tbm=isch&source=iu&ictx=1&fir=H7MDzX6dzGGvgM%253A%252CTs7Vc7Z1d8xbBM%252C_&usg=__u-GQX3-9kIm1puc03W44oGy2WsI%3D&sa=X&ved=0ahUKEwjg7ev72PPZAhUC8RQKHWTPCIcQ9QEIKzAB#imgrc=H7MDzX6dzGGvgM:" , align="center" , width="120" , height="120" > 
 	                	<div>
 
 	                	</div>
