--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	                    	</li> </p>
 	                	</div class="col-lg-4">
 	                		<br/> <br/> <br/> <br/> 
-	                		<img src="https://www.google.fr/search?q=image+twitter&tbm=isch&source=iu&ictx=1&fir=H7MDzX6dzGGvgM%253A%252CTs7Vc7Z1d8xbBM%252C_&usg=__u-GQX3-9kIm1puc03W44oGy2WsI%3D&sa=X&ved=0ahUKEwjg7ev72PPZAhUC8RQKHWTPCIcQ9QEIKzAB#imgrc=H7MDzX6dzGGvgM:" , align="center" , width="120" , height="120" > 
+	                		<img src="https://cdn.downdetector.com/static/uploads/c/300/0a356/twitter-logo_19.png", align="center" , width="120" , height="120" > 
 	                	<div>
 
 	                	</div>
