--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	                    	</li> </p>
 	                	</div class="col-lg-4">
 	                		<br/> <br/> <br/> <br/> 
-	                		<img src="https://cdn.downdetector.com/static/uploads/c/300/0a356/twitter-logo_19.png", align="center" , width="120" , height="120" > 
+	                		<img src="images/twitter.png", align="center" , width="120" , height="120" > 
 	                	<div>
 
 	                	</div>
