--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 	                	</div class="col-lg-4">
 	                	<br/> <br/> <br/> <br/> 
 	                	<br/>
-	               		<img src="images\Linkedin.png" , align="center" , width="120" , height="120" > 
+	               		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/Linkedin.svg/2000px-Linkedin.svg.png" , align="center" , width="120" , height="120" > 
 	                	<div>
 
 	                	</div>	                	
