sup derniere section

--- a/index.html
+++ b/index.html
@@ -713,8 +713,8 @@
 
 
 
-
-<!-- derniere section -->
+<!--
+derniere section 
         <section id="derniere" class="whatwedo-section">
         <div class="container">
             <div class="row">
@@ -742,7 +742,7 @@
                 </div>                
             </div>                                                 
         </div>
-    </section>
+    </section> -->
 	<a id="back2Top" title="Back to top" href="#">&#10148;</a>
 	
     <!-- jQuery -->
