--- a/index.html
+++ b/index.html
@@ -525,16 +525,24 @@
 
 
             <div class="row">
-            	<div class="col-lg-7">
-            		<h3><b> DataCity Paris</b></h3>
-            		<br/> <br/>
-            		<p align="left"> C'est un programme d’open-innovation qui entre dans le cadre de l’application de l’open data pour les smart cities. Il est créé par NUMA en partenariat avec la Ville de Paris. <br/>
-            	    NUMA est un résea </p>
-            	</div>
             	<div class="col-lg-5">
-            		<br/> <br/><br/> <br/>
-            		<img src="images\datacity.png" , align="center" , width="400" , height="200" >        
-            	</div>            	
+            		<br/> <br/> <br/>
+            		<img src="images\image_data_gouv.png" , align="center" , width="230" , height="230" >        
+            	</div>              	
+            	<div class="col-lg-7">
+            		<h3><b> Portail Data.gouv.fr</b></h3>
+            		<br/> <br/>
+            		<p align="left"> 
+            			Le site data.gouv.fr est une plateforme de publication des données de l’état. Il représente le service public de la donnée.
+
+						<br/> Il regroupe des données publiées par plusieurs structures de l’état comme les ministères, l’institut nationale de la statistique et des études économiques (INSEE). Cette plateforme met à disposition principalement les jeux de données de référence qui présentent le plus fort impact économique et social afin de facilité leur réutilisation. 
+						En effet, plusieurs thématiques abordées dont
+						l'agriculture et l'alimentation, la culture, l'économie et l'emploi,
+						la santé et le ocial, l'éducation et la recherche …
+						<br/> Ce site s’adresse principalement aux entreprises et aux administrations qui ne réussissent pas à acquérir ou collecter des données, qui sont bien utiles pour leur développement et leur prise de décision. <br/>
+            	    </p>
+            	</div>
+          	
             </div>           
 
         	<br/> <br/>
