--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 
             <div class="row">
             	<div class="col-lg-5">
-            		<br/> <br/> <br/>
+            		<br/> <br/> <br/> <br/> <br/>
             		<img src="images\image_data_gouv.png" , align="center" , width="230" , height="230" >        
             	</div>              	
             	<div class="col-lg-7">
@@ -563,7 +563,7 @@
             		<p align="left">
 
             			Opendata.paris.fr est  le site de la démarche Open Data de la Ville de Paris représentant la plateforme de publication des données relative à la ville de Paris qui sont  publiés par les services de la Ville et ses partenaires sous licence ODbL.<br/><br/>
-            			Son principal objectif est d'assurer une meilleure qualité du service publique. Il nous donne, par exemeple, la disponibilité en temps réel des : 
+            			Son principal objectif est d'assurer une meilleure qualité du service publique. Il nous donne, par exemeple, la disponibilité en temps réel des
             			Autolibs, Vélib, ainsi que les listes des sites municipaux équipés de point d’accès wifi.
             			<br/> <br/>Les jeux de données qui y sont publiés tournent principalement autour des thèmes suivants:
             			<br/>		
@@ -585,6 +585,25 @@
         
        	
        	    </div>
+
+       	    <div class="row">
+       	    	<div class="col-lg-2">
+            	</div>
+            	<div class="col-lg-10">
+            		<br/><br/><br/>
+            		<h2><b> Cadre juridique: Open Data et administrations </b></h2>
+            		<br/> <br/>
+            		<p align="left">
+
+            			 publiés par les services de la Ville et ses partenaires sous licence ODbL.<br/><br/>
+            			Son principal objectif est d'assurer une meilleure qualité du service publique. Il nous donne, par exemeple, la 
+            			<br/> <br/>Les jeux de données qui y sont publiés tournent principalement autour des thèmes suivants:
+            			<br/>		
+            			<br/><li align="left">Equipements, Services, Social, </li>
+
+            	</div>
+            </div>
+
        	</div>    
     </section>
 
