--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a class="page-scroll" href="#france"> Open Data France </a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#projets"> Projets sur l'Open Data </a>
+                        <a class="page-scroll" href="#projets"> Projets Open Data </a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#startup"> Startups Open Data  </a>
@@ -606,7 +606,18 @@
             					
             			<br/><li align="left">Depuis octobre 2017, les administrations de 50 agents ou plus ont pour obligation de mettre en ligne l’intégralité des documents listés dans leurs RIP dans le cas de disponibilité des fichiers sous forme électronique,</li>
             			<br/><li align="left">A partir du 7 octobre 2018,  les administrations seront alors tenues de diffuser toutes leurs bases de données , dont la publication présente un intérêt économique, social, sanitaire ou environnemental  et même leurs mises à jour.
-  </li>
+  						</li>
+  						<p align="left"> 
+  							Depuis 7 avril , les organismes publics sont censés publier sous forme d'Open Data, les documents administratifs qu’ils transmettaient individuellement suite à des demandes de citoyens, ainsi que leurs versions mises à jour.
+  							<br/> <br/>
+  							Le 7 octobre 2017, après un an de la promulgation de la loi numérique, des obligation viennent imposer aux administrations publiques relativement de grande tailles (avec plus de 50 agents) de mettre en ligne des documents listés dans leurs repertoires à intérêt public (RIP). <br/> Cette obligation est soumise à une certaine condition
+  							qui est que les fichiers correspondants seraient déja sous format électronique, il ne s'agit donc pas d'effectuer des traitements supplémentaires aux usages normaux de ses fichier rien que pour les transformer en données ouvertes en ligne. 
+							<br/> <br/>
+						    A partir du 7 octobre 2018, et dans le cadre de la dernière étape de ce mouvement Open Data  les administrations seront alors tenues de diffuser toutes leurs bases de données , dont la publication présente un intérêt économique, social, sanitaire ou environnemental  et même leurs mises à jour.
+
+						    <br/> <i> Les termes "intérêt économique, social, sanitaire ou environnemental" n'étant pas encore définis d'une manière bien précise, ceci pourrait être un obstacle face à l'application de cette loi. <br/>
+						    Et ce est mis à part la grandes quantités de données (des téraoctets) à diffuser par les administration, ce qui n'est techniquement pas évident. </i>
+						</p>
 
             	</div>
             </div>
